tests/fixtures/invalid/bytes_pow_int.py
# Cannot power Bytes and Int
x: bytes = b"hello" ** 1
